# dawati-shell

./: .gitignore  .vimrc  AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  multiproc-todo.txt
ahoghill/ahoghill/: Makefile.am  ahoghill-example-table.c  ahoghill-example-table.h  ahoghill-grid-view.c  ahoghill-grid-view.h  ahoghill-media-art.c  ahoghill-media-art.h  ahoghill-media-tile.c  ahoghill-media-tile.h  ahoghill-play-button.c  ahoghill-play-button.h  ahoghill-playlist-header.c  ahoghill-playlist-header.h  ahoghill-playlist-np.c  ahoghill-playlist-np.h  ahoghill-playlist-placeholder.c  ahoghill-playlist.c  (+16 more)
carrick/: Makefile.am  carrick-applet.c  carrick-connman-manager.c  carrick-connman-manager.h  carrick-icon-factory.c  carrick-list.c  carrick-marshal.list  carrick-network-model.c  carrick-network-model.h  carrick-notification-manager.c  carrick-ofono-agent.c  carrick-ofono-agent.h  carrick-pane.c  carrick-proxy-gsettings.c  carrick-proxy-gsettings.h  carrick-service-item.c  carrick-service-item.h  carrick-shell.h  carrick-util.c  carrick-util.h  connman-technology.xml  mux-banner.c  mux-banner.h  nbtk-gtk-expander.c
dalston/: Makefile.am  dalston-battery-monitor.c  dalston-battery-monitor.h  dalston-brightness-manager.c  dalston-brightness-manager.h  dalston-brightness-slider.c  dalston-brightness-slider.h  dalston-button-monitor.c  dalston-button-monitor.h  dalston-idle-manager.c  dalston-idle-manager.h  dalston-power-applet.c  dalston-power-applet.h  dalston-volume-applet.c  dalston-volume-applet.h  dalston-volume-pane.c  dalston-volume-pane.h  dalston-volume-slider.c  dalston-volume-slider.h  dalston-volume-status-icon.c  dalston-volume-status-icon.h
data/: Makefile.am  dawati.desktop  moblin-panel-zones.desktop.in  mutter-meego.schemas.in  mutter-moblin.schemas.in  org.dawati.shell.gschema.xml
gdu/: Makefile.am  gdu-device.c  gdu-device.h
gvc/: Makefile.am  gvc-mixer-control.c  gvc-mixer-event-role.c  gvc-mixer-sink-input.c  gvc-mixer-sink.c  gvc-mixer-source-output.c  gvc-mixer-source.c  gvc-pulseaudio-fake.h
libanerley/: Makefile.am  anerley.pc.in  autogen.sh  configure.ac
libgvc/: Makefile.am  gvc-channel-map.c  gvc-channel-map.h  gvc-mixer-control.c  gvc-mixer-stream.c  gvc-mixer-stream.h
libhal-panel-glib/: .gitignore  Makefile.am  hal-laptop-panel.xml  hal-panel-proxy.c  hal-panel-proxy.h
libhal-power-glib/: .gitignore  Makefile.am  hal-power-proxy.c  hal-power-proxy.h  hal-system-power-management.xml
libmnb/: Makefile.am  mnb-clutter.pc.in  mnb-gtk.pc.in  mnb-panel-client.c  mnb-panel-client.h  mnb-panel-clutter.c  mnb-panel-clutter.h  mnb-panel-gtk.c  mnb-panel-gtk.h
libmoblin-panel/: Makefile.am  moblin-panel-clutter.pc.in  moblin-panel-clutter.pc.in.in  moblin-panel-gtk.pc.in  moblin-panel.pc.in
mutter-stub/: Makefile.am  mutter-classes.c  mutter-enum-types.h.in  mutter-stub.c
mux/: Makefile.am  Makefile.in  mux-bin.c  mux-bin.h  mux-light-switch.c  mux-light-switch.h  mux-switch-box.c  mux-switch-box.h  test.c
panels/: Makefile.am
penge/: Makefile.am  autogen.sh  configure.ac  penge-app-tile.c  penge-apps-pane.c  penge-block-container.h  penge-calendar-pane.c  penge-calendar-pane.h  penge-clickable-label.c  penge-count-tile.c  penge-count-tile.h  penge-dynamic-box.c  penge-dynamic-box.h  penge-email-pane.c  penge-email-pane.h  penge-event-tile.c  penge-events-pane.c  penge-everything-pane.c  penge-everything-pane.h  penge-grid-view.c  penge-grid-view.h  penge-interesting-tile.c  penge-interesting-tile.h  penge-magic-texture.c  penge-magic-texture.h  penge-people-tile.c  penge-recent-file-tile.c  penge-recent-file-tile.h  penge-task-tile.c  penge-task-tile.h  penge-tasks-pane.c  penge-utils.c  penge-utils.h  penge-view-background.c  penge-welcome-tile.c  penge-welcome-tile.h  penge.pc.in  test-block-container.c  test-everything-pane.c  test-model-bridge.c
shell/: Makefile.am  dawati-netbook-mutter-hints.h  dawati-netbook.c  dawati-netbook.h  dawati-shell-plugin.c  main.c  marshal.list  mnb-enum-types.h.in  mnb-input-manager.c  mnb-input-manager.h  mnb-panel-dbus.xml  mnb-panel-frame.c  mnb-panel-frame.h  mnb-panel-oop.c  mnb-panel.c  mnb-panel.h  mnb-spinner.c  mnb-statusbar.c  mnb-statusbar.h  mnb-toolbar-applet.c  mnb-toolbar-applet.h  mnb-toolbar-background.c  mnb-toolbar-button.h  mnb-toolbar-clock.c  mnb-toolbar-dbus.xml  mnb-toolbar-icon.c  mnb-toolbar-shadow.c  mnb-toolbar-shadow.h  mnb-toolbar.c  shell-a11y.h  shell-app-system.c  shell-app.c  shell-generic-container.h  shell-global.c  shell-global.h  shell-window-tracker.c
src/: Makefile.am  dawati-netbook-constraints.c  dawati-netbook-constraints.h  dawati-netbook-mutter-hints.c  dawati-netbook.c  dawati-netbook.h  marshal.list  meego-netbook-constraints.c  meego-netbook-constraints.h  meego-netbook-mutter-hints.c  meego-netbook-mutter-hints.h  meego-netbook.c  meego-netbook.h  mnb-clipboard-item.c  mnb-clipboard-item.h  mnb-clipboard-store.c  mnb-clipboard-store.h  mnb-clipboard-view.c  mnb-clipboard-view.h  mnb-drop-down.c  mnb-drop-down.h  mnb-entry.c  mnb-entry.h  mnb-enum-types.c.in  mnb-enum-types.h.in  mnb-expander.c  mnb-expander.h  mnb-input-manager.c  mnb-input-manager.h  mnb-launcher-application.c  mnb-launcher-application.h  mnb-launcher-button.c  mnb-launcher-button.h  mnb-launcher-entry.c  mnb-launcher-entry.h  mnb-launcher-grid.c  mnb-launcher-grid.h  mnb-launcher-searchbar.c  mnb-launcher-searchbar.h  mnb-launcher-tree.c  (+87 more)
st/: Makefile.am  st-box-layout-child.c  st-box-layout.c  st-entry.c  st-icon.h  st-scroll-bar.c  st-style.c  st-subtexture.h  st-texture-cache.c  st-texture-frame.h  st-theme-node.c
tests/: Makefile.am  test-entry.c  test-expander.c  test-launcher-button.c  test-launcher-monitor.c  test-launcher-searchbar.c  test-launcher-tree.c  test-launcher.c  test-panel-clutter.c  test-panel-clutter.service.in  test-panel-gtk.c  test-panel-gtk.service.in  test-panel.c  test-panel.css.in  test-panel.service.in  test-pasteboard.c  test-screensized.c  test-spinner.c  test-status-entry.c  test-statusbar.c  test-tray.c
(+1909 files in other folders)
